# salute-speech-recognizer

./: .env.example  .gitignore  CHANGELOG.md  CONFIG.md  DEVDOCS.md  README.md  USAGE.md  pyproject.toml  requirements.txt  ss_recognize.py
.github/workflows/: ci.yml  release.yml
Result/: audio.grpc.norm.json  audio.grpc.raw.json  audio.md  audio.raw.json  audio_mono.md  audio_mono.raw.json
Source/: hints.txt  speakers_map.json
docs/: ARCHITECTURE.md  MODES.md  PROCESS.md  SELECTOR.md
docs/ADR/: ADR-0001-canonical-as-default.md  ADR-0002-chunked-http-fallback.md  ADR-0003-normalized-json-schema.md  ADR-0004-adaptive-case-registry.md
docs/KB/: case_stats.yml  faq.md  operational.md  overview.md  recipes.md  schema_case.md  success_log.csv  success_log.md  troubleshooting.md
salute_speech_recognizer/: __init__.py  api.py  audio_prep.py  chunked.py  cli.py  dedup.py  grpc_async.py  http_async.py  kb_log.py  mapping.py  normalize.py  recognize.py  render.py  strategy_selector.py
salute_speech_recognizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: curated_synthesizer.py  e2e_test.py  h2n_pair_process.py  hints_auto_from_md.py  hints_extractor.py  hints_shorten.py  merge_hints.py  merge_norms_dedup.py  postprocess_rules.py  rerender_from_norm.py  save_norm.py  speakers_map_validator.py
tests/: test_api.py  test_mapping.py  test_normalize.py
tests/fixtures/: aac_48000Hz_ch1_br63836_20s.m4a  aac_clip90.aac
tests/golden/: aac_48000Hz_ch1_br63836_20s.head.md  aac_clip_smart.head.md  h2n_merged.head.md  (+2 more)
(+20 files in other folders)
