[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "salute-speech-recognizer"
version = "1.0.2"
description = "CLI для транскрибации аудио через Салют Спич (gRPC) с hints, speaker mapping и Markdown-рендером"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Project Authors" }]
license = { text = "Unlicense" }
keywords = ["speech", "recognition", "grpc", "salute", "sber"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
  "Topic :: Multimedia :: Sound/Audio :: Speech"
]
dependencies = [
  "python-dotenv>=1.0.1",
  "grpcio>=1.62.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "black>=24.8.0",
  "isort>=5.13.2",
  "flake8>=7.1.1",
  "mypy>=1.11.2",
  "pre-commit>=3.8.0"
]

[project.scripts]
ssr = "salute_speech_recognizer.cli:main"

[tool.setuptools]
packages = ["salute_speech_recognizer"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-ra"
python_files = ["test_*.py", "*_test.py"]
markers = [
  "integration: marks tests that hit real external services (deselect with '-m not integration')"
]

